--- a/asides/0_basicinformation.html
+++ b/asides/0_basicinformation.html
@@ -14,10 +14,10 @@ title: Basic Information
         <li><i class="fa fa-map-marker"></i>
           <span class="sr-only">Location:</span>Dinslaken, Germany</li>
         <li><i class="fa fa-envelope-o"></i>
-          <span class="sr-only">Email:</span><a href="#">julian.giesen@posteo.de</a>
+          <span class="sr-only">Email:</span>julian.giesen[at]posteo.de
         </li>
         <li><i class="fa fa-link"></i>
-          <span class="sr-only">Website:</span><a href="#">http://juliangiesen.de</a>
+          <span class="sr-only">Website:</span><a href="http://juliangiesen.de">http://juliangiesen.de</a>
         </li>
       </ul>
     </div>
