minor updates on content

--- a/asides/0_basicinformation.html
+++ b/asides/0_basicinformation.html
@@ -17,7 +17,7 @@ title: Basic Information
           <span class="sr-only">Email:</span>julian.giesen[at]posteo.de
         </li>
         <li><i class="fa fa-link"></i>
-          <span class="sr-only">Website:</span><a href="http://juliangiesen.de">http://juliangiesen.de</a>
+          <span class="sr-only">Website:</span><a href="http://www.juliangiesen.de">http://www.juliangiesen.de</a>
         </li>
       </ul>
     </div>
