--- a/sections/1_latestprojects.html
+++ b/sections/1_latestprojects.html
@@ -8,7 +8,10 @@ title: Latest Projects
   <div class="section-inner">
     <h2 class="heading">Latest Projects</h2>
     <div class="content">
-      <hr class="divider" />
+    	<h5>Nothing special.</h5>
+      <!--<hr class="divider" />-->
+      <p>
+      I am working on some private projects at the moment, but nothing special to share about them.
     </div>
   </div>
 </section>
