--- a/asides/1_skills.html
+++ b/asides/1_skills.html
@@ -8,6 +8,7 @@ title: Skills
   <div class="section-inner">
     <h2 class="heading">Skills</h2>
     <div class="skillset">
+      <h5><i>Static typed languages</i></h5>
       <div class="item">
         <h3 class="level-title">C++
           <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have worked with this language or technologie and I am comfortable with it.">Working Knowledge</span>
@@ -28,6 +29,18 @@ title: Skills
       </div>
       <div class="item">
         <h3 class="level-title">Java
+          <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have played with this language or technologie and I have a basic understanding of its purpose.">Basic Knowledge</span>
+        </h3>
+        <div class="level-bar">
+          <div class="level-bar-inner" data-level="60%">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="skillset">
+      <h5><i>Dynamically typed languages</i></h5>
+      <div class="item">
+        <h3 class="level-title">Python
           <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have played with this language or technologie and I have a basic understanding of its purpose.">Basic Knowledge</span>
         </h3>
         <div class="level-bar">
