--- a/asides/0_basicinformation.html
+++ b/asides/0_basicinformation.html
@@ -17,7 +17,10 @@ title: Basic Information
           <span class="sr-only">Email:</span>julian.giesen[at]posteo.de
         </li>
         <li><i class="fa fa-link"></i>
-          <span class="sr-only">Website:</span><a href="http://www.juliangiesen.de">http://www.juliangiesen.de</a>
+          <span class="sr-only">Website:</span><a href="{{ site.baseurl }}">www.juliangiesen.de</a>
+        </li>
+        <li><i class="fa fa-pencil-square-o"></i>
+          <span class="sr-only">Blog:</span><a href="{{ site.baseurl }}blog">my little blog</a>
         </li>
       </ul>
     </div>
