added new skill

--- a/asides/1_skills.html
+++ b/asides/1_skills.html
@@ -40,6 +40,15 @@ title: Skills
     <div class="skillset">
       <h5><i>Dynamically typed languages</i></h5>
       <div class="item">
+        <h3 class="level-title"><a href="https://github.com/okamstudio/godot/wiki/gdscript">GDScript</a>
+          <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have played with this language or technologie and I have a basic understanding of its purpose.">Basic Knowledge</span>
+        </h3>
+        <div class="level-bar">
+          <div class="level-bar-inner" data-level="90%">
+          </div>
+        </div>
+      </div>
+      <div class="item">
         <h3 class="level-title">Python
           <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have played with this language or technologie and I have a basic understanding of its purpose.">Basic Knowledge</span>
         </h3>
@@ -48,6 +57,7 @@ title: Skills
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 </aside>
