--- a/sections/1_latestprojects.html
+++ b/sections/1_latestprojects.html
@@ -5,8 +5,8 @@ title: Latest Projects
 ---
 
 <section class="latest section">
-  <div class="section-inner">
-    <h2 class="heading">Latest Projects</h2>
+  <h3 class="title with-icon"><span class="fa fa-rocket cat-title"></span>Latest Projects</h3>
+  <div class="grid-block">
     <div class="content">
     	<h5>Nothing special.</h5>
       <!--<hr class="divider" />-->
@@ -15,3 +15,4 @@ title: Latest Projects
     </div>
   </div>
 </section>
+<div class="deviter"></div>
