--- a/sections/2_otherprojects.html
+++ b/sections/2_otherprojects.html
@@ -5,8 +5,8 @@ title: Other Projects
 ---
 
 <section class="projects section">
-  <div class="section-inner">
-    <h2 class="heading">Other Projects</h2>
+    <h3 class="title with-icon"><span class="fa fa-paperclip cat-title"></span>Other Projects</h3>
+  <div class="grid-block">
     <div class="content">
       <div class="item row">
         <a class="col-md-4 col-sm-4 col-xs-12" href="{{ site.baseurl }}assets/images/projects/masterthesis.png" target="_blank">
@@ -52,3 +52,4 @@ title: Other Projects
     </div>
   </div>
 </section>
+<div class="deviter"></div>
