--- a/asides/0_basicinformation.html
+++ b/asides/0_basicinformation.html
@@ -10,8 +10,8 @@ title: Basic Information
   <ul class="list-unstyled list-strip">
     <li><i class="fa fa-birthday-cake"></i>
       <span style="padding-left:10px;"></span>{{site.author.age}}</li>
-    <li><i class="fa fa-map-marker"></i>
-      <span style="padding-left:10px"></span>{{site.author.address}}</li>
+    <li><i class="fa fa-map-marker" style="padding-left:3px;"></i>
+      <span style="padding-left:13px"></span>{{site.author.address}}</li>
     <li><i class="fa fa-envelope-o"></i>
       <span style="padding-left:10px"></span>{{site.author.email}}
     </li>
