sticky footer and updated thanks page

--- a/danke/index.html
+++ b/danke/index.html
@@ -1,6 +1,18 @@
 ---
-layout: credits
-title: Danke für deine Nachricht
+layout: thanks
 ---
 
-Ich werde Ihnen so schnell wie möglich antworten.
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 text-center">
+        <!-- <img src="img/team/profile3.jpg" class="img-responsive img-circle center-block" alt="" width="20%" height="20%">
+        <h2 class="section-heading">Freelance Mobile App & Game Developer</h2>-->
+        <h2 class="section-heading">Vielen Dank für Ihre Nachricht</h2>
+        <hr>
+    </div>
+    <div class="col-lg-8 col-lg-offset-2 text-center">
+      <p> Ich werde Ihnen so schnell wie möglich antworten.</p>
+    </div>
+    <div class="col-lg-12 text-center">
+        <a href="{{ site.baseurl }}" class="btn btn-primary btn-xl">Zurück</a>
+    </div>
+</div>
